More fixes to heading and anti-pnum-overlapper

--- a/static/css/text/paragraph-num.scss
+++ b/static/css/text/paragraph-num.scss
@@ -9,7 +9,7 @@ a.as, a.bl, a.bps, a.eno89, a.fuk03, a.fol, a.gatha-number, a.gatn, a.gbm,
     a.gno78, a.har04, a.hoe16, a.hos89a, a.hos89b, a.hos91, a.hs, a.kel,
     a.mat85, a.mat88, a.mit57, a.ms, a.pts, a.pts_pn, a.san87, a.san89,
     a.sc, a.sen82, a.sht, a.snp-vagga-section-verse, a.snp-vagga-verse, a.t,
-    a.titus, a.tlinehead, a.ud-sutta, a.ud-vagga-sutta, a.tri62, a.tri95,
+    a.titus, a.t-linehead, a.ud-sutta, a.ud-vagga-sutta, a.tri62, a.tri95,
     a.tu, a.uv, a.vai58, a.vai59, a.vai61, a.verse-num-pts, a.vimula, a.vn,
     a.wal48, a.wal50, a.wal52, a.wal55b, a.wal57c, a.wal58, a.wal59a, a.wal60,
     a.wal61, a.wal68a, a.wal70a, a.wal70b, a.wal76, a.wal78, a.wal80c, a.wp,
@@ -29,20 +29,26 @@ a.as, a.bl, a.bps, a.eno89, a.fuk03, a.fol, a.gatha-number, a.gatn, a.gbm,
     color: #2DB3A7;
     letter-spacing: normal;
     transition: 250ms;
+    transition-property:opacity;
     opacity: 0;
 
     .infomode & {
 		visibility:visible;
 		opacity: 1;
 		transition: 250ms;
+		transition-property:opacity;
     }
 }
 
 a.ms {margin:0.7em 0 0 -14.5em; color:#00B428;}
 a.sc {margin:0.7em 0 0 -4.3em; color:#B3A72D;}
-a.t {margin: 0 0 0 -9.3em; color:#00B428;}
-/* Class added in javascript */
-a.t.collides {margin-top: 1em;}
+a.t, a.t-linehead {
+	margin: 0 0 0 -9.3em;
+	color:#00B428;
+	/* Class added in javascript */
+	&.collides {margin-top: 1em;}
+}
+
 a.wp {margin:0.7em 0 0 -5.3em; color:red;}
 a.pts {margin:-0.2em 0 0 -12.1em; color:#B2AF8C;}
 a.vn {margin:0.7em 0 0 -6em; color:#9B0F00;}
@@ -74,7 +80,7 @@ a.sen82
 a.sht
 a.snp-vagga-section-verse
 a.snp-vagga-verse
-a.t,  a.tlinehead
+a.t,  a.t-linehead
 a.tri62,, a.tri95
 a.ud-sutta
 a.ud-vagga-sutta
